--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "labelblind",
   "version": "0.1.0",
+  "homepage": "https://ankushsss.github.io/LabelBlindTask/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
